--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "serverside",
+  "name": "connectingids",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
