--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "nodemon src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build"
   },
